WEB: Fix nav overflow on small devices

--- a/css/menu.css
+++ b/css/menu.css
@@ -84,10 +84,10 @@ nav dl dd {
 		position: fixed;
 		width: 100%;
 		right: -100%;
-		bottom: 0;
+		top: 0;
 		z-index: 90;
 		padding: 0;
-		min-height: 100%;
+		height: 100%;
 		overflow-y: auto;
 		background: #A82709;
 	}
